# freegemas

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
include/: Animation.h  BaseButton.h  Board.h  Coord.h  DrawingQueue.h  FloatingScore.h  Game.h  GameBoard.h  GameBoardSounds.h  GameHint.h  GameIndicators.h  GameSounds.h  JewelGroupAnim.h  Match.h  MultipleMatch.h  OptionsManager.h  ParticleSystem.h  ScoreTable.h  Square.h  State.h  StateGame.h  StateGameEndless.h  StateGameTimed.h  StateGameTimetrial.h  StateHowToPlay.h  StateMainMenu.h  StateOptions.h  Util.h  baseButton.h  board.h  button.h  coord.h  floatingScore.h  font.h  game.h  go_drawingqueue.h  go_font.h  go_image.h  go_music.h  go_sound.h  (+15 more)
libs/SDL2_ttf-2.0.12/: Makefile  SDL2_ttf.pc  config.status  glfont  libtool  showfont
libs/SDL2_ttf-2.0.12/.deps/: SDL_ttf.Plo  glfont.Po  showfont.Po
libs/SDL2_ttf-2.0.12/.libs/: glfont  libSDL2_ttf-2.0.so.0.10.2  showfont
platform/unix/: freegemas.desktop
platform/windows/: appicon.rc
src/: Animation.cpp  BaseButton.cpp  Board.cpp  Ecuaciones.cpp  Game.cpp  GameBoard.cpp  GameBoardSounds.cpp  GameHint.cpp  GameIndicators.cpp  GameSounds.cpp  OptionsManager.cpp  ScoreTable.cpp  State.cpp  StateGame.cpp  StateGameEndless.cpp  StateGameTimed.cpp  StateGameTimetrial.cpp  StateHowtoplay.cpp  StateMainMenu.cpp  StateOptions.cpp  Util.cpp  animation.cpp  baseButton.cpp  board.cpp  ecuaciones.cpp  font.cpp  game.cpp  go_font.cpp  go_image.cpp  go_music.cpp  go_sound.cpp  go_window.cpp  image.cpp  log.cpp  main.cpp  music.cpp  scoreTable.cpp  sound.cpp  state.cpp  stateGame.cpp  (+4 more)
src/temp/: scoreTable.cpp
